--- a/gb/18/10/19/n10795340.md
+++ b/gb/18/10/19/n10795340.md
@@ -1,67 +1,72 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/tx281/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tx281/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/tx281/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/tx281/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/tx281/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tx281/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/tx281/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/tx281/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/tx281/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/tx281/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/tx281/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/tx281/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/tx281/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/tx281/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/tx281/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/tx281/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/tx281/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/tx281/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/tx281/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/tx281/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/tx281/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/tx281/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/tx281/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/tx281/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/tx281/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/tx281/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/tx281/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/tx281/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/tx281/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/tx281/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/tx281/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/tx281/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/tx281/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/tx281/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/tx281/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/tx281/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/tx281/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/tx281/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/tx281/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/tx281/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/tx281/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/tx281/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/tx281/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/tx281/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/tx281/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>“精彩社造在我家” 展现社区丰沛生命力</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2018/10/9673c540700763d1d57d6a627f3c9990-600x400.jpg" />
 <h6>“精彩社造在我家”成果展 19日在螺阳文教基金会举行！（廖素贞／大纪元）
 </h6>
 <hr>
-<p>【大纪元2018年10月19日讯】（大纪元记者廖素贞台湾云林报导）由文化部、云林县政府文化处指导，螺阳文教基金会承办的第三期村落<ahref="https://github.com/tx281/djy/blob/master/gb/tag/%E6%96%87%E5%8C%96%E5%8F%91%E5%B1%95.md#1">文化发展</a>计划，19日在西螺延平老街文化馆举办“精彩社造在我家”成果展！现场除有社区摄影、竹艺创作、美食展及各项工艺静态展示之外，更有社区歌仔戏演出的影片欣赏，展现埤头、正兴、河南及广福四社区丰沛的在地生命力，展期即日起至11月11日，欢迎有兴趣的朋友到西螺延平老街文化馆欣赏在地社区的文化魅力。</p>
-<p>今年西螺四个社区在螺阳文教基金会的辅导下，透过<ahref="https://github.com/tx281/djy/blob/master/gb/tag/%E7%A4%BE%E5%8C%BA%E8%90%A5%E9%80%A0.md#1">社区营造</a>基础课程，建立社区营造概念，同时进行社区资源调查、盘整，让社区伙伴重新认识社区的人文与产业，进而发展出各社区的特色文化。</p>
-<figure id="attachment_10795344" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2018/10/c18500f76db18109062c434908250898.jpg"><img class="wp-image-10795344 size-large" src="https://i.epochtimes.com/assets/uploads/2018/10/c18500f76db18109062c434908250898-600x450.jpg" alt="" width="600" b="450" /></a><figcaption class="wp-caption-text">参与社造来宾开心展示社区文创品（廖素贞／大纪元）</figcaption></figure>
+<p>【大纪元2018年10月19日讯】（大纪元记者廖素贞台湾云林报导）由文化部、云林县政府文化处指导，螺阳文教基金会承办的第三期村落<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%96%87%E5%8C%96%E5%8F%91%E5%B1%95.md#1">文化发展</a>计划，19日在西螺延平老街文化馆举办“精彩社造在我家”成果展！现场除有社区摄影、竹艺创作、美食展及各项工艺静态展示之外，更有社区歌仔戏演出的影片欣赏，展现埤头、正兴、河南及广福四社区丰沛的在地生命力，展期即日起至11月11日，欢迎有兴趣的朋友到西螺延平老街文化馆欣赏在地社区的文化魅力。</p>
+<p>今年西螺四个社区在螺阳文教基金会的辅导下，透过<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%A4%BE%E5%8C%BA%E8%90%A5%E9%80%A0.md#1">社区营造</a>基础课程，建立社区营造概念，同时进行社区资源调查、盘整，让社区伙伴重新认识社区的人文与产业，进而发展出各社区的特色文化。</p>
+<figure id="attachment_10795344" aria-describedby="caption-attachment-10795344" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2018/10/c18500f76db18109062c434908250898.jpg"><img class="wp-image-10795344 size-large" src="https://i.epochtimes.com/assets/uploads/2018/10/c18500f76db18109062c434908250898-600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-10795344" class="wp-caption-text">参与社造来宾开心展示社区文创品（廖素贞／大纪元）</figcaption></figure>
 <p>广福社区是今年的萌芽新生，透过螺阳文教基金会的辅导，在云邑百二庄老大妈会理事长-曾朝勤，带领着基金会3位实习生-吴俊宏、李俊逸、余承翰于社区走跳田调之下，完成“广福社区导览折页”，建立社区完整的文化资料库，厚植社区发展实力。</p>
-<figure id="attachment_10795345" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2018/10/b09b0fc05af1aaa03d4b3f1b8b2bdd39.jpg"><img class="wp-image-10795345 size-large" src="https://i.epochtimes.com/assets/uploads/2018/10/b09b0fc05af1aaa03d4b3f1b8b2bdd39-600x450.jpg" alt="" width="600" b="450" /></a><figcaption class="wp-caption-text">埔心社区的竹编文创品（廖素贞／大纪元）</figcaption></figure>
-<figure id="attachment_10795348" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2018/10/22bfb451cbeb0fad95b82bf555b8140b.jpg"><img class="wp-image-10795348 size-large" src="https://i.epochtimes.com/assets/uploads/2018/10/22bfb451cbeb0fad95b82bf555b8140b-600x450.jpg" alt="" width="600" b="450" /></a><figcaption class="wp-caption-text">埤头社区，今年持续推展丰足的社造能量，增设多件立体雕塑作品。（廖素贞／大纪元）</figcaption></figure>
-<figure id="attachment_10795346" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2018/10/4d74bab2704d366b239d8d3d78cbde7f.jpg"><img class="wp-image-10795346 size-large" src="https://i.epochtimes.com/assets/uploads/2018/10/4d74bab2704d366b239d8d3d78cbde7f-600x450.jpg" alt="" width="600" b="450" /></a><figcaption class="wp-caption-text">埤头社区 “稻浪上的鲸鱼-小夜灯”，可爱的模样，让与会来宾频频出价想购买！（廖素贞／大纪元）</figcaption></figure>
-<p>埔心曾是西螺竹工艺重地，家家户户皆具编制盛装蔬菜竹篓子的手工艺，在还没有纸箱时，是社区重要的经济收入，今年透过办理竹工艺课程，重拾社区居民对传统竹编工艺的记忆。更透过与在地企业-螺情卤味合作，将社区竹编工艺结合“满福/富贵油饭”的包装盒，希望透过商品通路，对外行销西螺埔心庄<ahref="https://github.com/tx281/djy/blob/master/gb/tag/%E7%A4%BE%E5%8C%BA%E6%96%87%E5%8C%96.md#1">社区文化</a>。</p>
+<figure id="attachment_10795345" aria-describedby="caption-attachment-10795345" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2018/10/b09b0fc05af1aaa03d4b3f1b8b2bdd39.jpg"><img class="wp-image-10795345 size-large" src="https://i.epochtimes.com/assets/uploads/2018/10/b09b0fc05af1aaa03d4b3f1b8b2bdd39-600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-10795345" class="wp-caption-text">埔心社区的竹编文创品（廖素贞／大纪元）</figcaption></figure>
+<figure id="attachment_10795348" aria-describedby="caption-attachment-10795348" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2018/10/22bfb451cbeb0fad95b82bf555b8140b.jpg"><img class="wp-image-10795348 size-large" src="https://i.epochtimes.com/assets/uploads/2018/10/22bfb451cbeb0fad95b82bf555b8140b-600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-10795348" class="wp-caption-text">埤头社区，今年持续推展丰足的社造能量，增设多件立体雕塑作品。（廖素贞／大纪元）</figcaption></figure>
+<figure id="attachment_10795346" aria-describedby="caption-attachment-10795346" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2018/10/4d74bab2704d366b239d8d3d78cbde7f.jpg"><img class="wp-image-10795346 size-large" src="https://i.epochtimes.com/assets/uploads/2018/10/4d74bab2704d366b239d8d3d78cbde7f-600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-10795346" class="wp-caption-text">埤头社区 “稻浪上的鲸鱼-小夜灯”，可爱的模样，让与会来宾频频出价想购买！（廖素贞／大纪元）</figcaption></figure>
+<p>埔心曾是西螺竹工艺重地，家家户户皆具编制盛装蔬菜竹篓子的手工艺，在还没有纸箱时，是社区重要的经济收入，今年透过办理竹工艺课程，重拾社区居民对传统竹编工艺的记忆。更透过与在地企业-螺情卤味合作，将社区竹编工艺结合“满福/富贵油饭”的包装盒，希望透过商品通路，对外行销西螺埔心庄<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%A4%BE%E5%8C%BA%E6%96%87%E5%8C%96.md#1">社区文化</a>。</p>
 <p>同时办理“社区导览人才培训课程”，培训社区伙伴说故事的能力，并串连西螺老街与社区资源，扩大西螺深度旅游的丰富性。另外，更办理“看我埔心风情”摄影课程，以影像记录社区，活泼生动地传播社区魅力。</p>
-<figure id="attachment_10795349" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2018/10/e343dc3b1286c77b0da2d0a94ca1d3dc.jpg"><img class="wp-image-10795349 size-large" src="https://i.epochtimes.com/assets/uploads/2018/10/e343dc3b1286c77b0da2d0a94ca1d3dc-600x450.jpg" alt="" width="600" b="450" /></a><figcaption class="wp-caption-text">螺阳文教基金会董事长何美惠（前排右二）与参与社造的与会贵宾开心合影。（廖素贞／大纪元）</figcaption></figure>
-<figure id="attachment_10795350" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2018/10/8d99cf84cc55a850e0b3cad188c47799.jpg"><img class="wp-image-10795350 size-large" src="https://i.epochtimes.com/assets/uploads/2018/10/8d99cf84cc55a850e0b3cad188c47799-600x450.jpg" alt="" width="600" b="450" /></a><figcaption class="wp-caption-text">埤头里里长李美玲（前排坐者）和与会来宾。（廖素贞／大纪元）</figcaption></figure>
+<figure id="attachment_10795349" aria-describedby="caption-attachment-10795349" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2018/10/e343dc3b1286c77b0da2d0a94ca1d3dc.jpg"><img class="wp-image-10795349 size-large" src="https://i.epochtimes.com/assets/uploads/2018/10/e343dc3b1286c77b0da2d0a94ca1d3dc-600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-10795349" class="wp-caption-text">螺阳文教基金会董事长何美惠（前排右二）与参与社造的与会贵宾开心合影。（廖素贞／大纪元）</figcaption></figure>
+<figure id="attachment_10795350" aria-describedby="caption-attachment-10795350" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2018/10/8d99cf84cc55a850e0b3cad188c47799.jpg"><img class="wp-image-10795350 size-large" src="https://i.epochtimes.com/assets/uploads/2018/10/8d99cf84cc55a850e0b3cad188c47799-600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-10795350" class="wp-caption-text">埤头里里长李美玲（前排坐者）和与会来宾。（廖素贞／大纪元）</figcaption></figure>
 <p>正兴社区近西螺老街，是西螺闹区的一部分，一直以来着重社区的艺文发展，今年由社区理事长李贵荣召集在地社区妈妈们组成正兴歌仔戏班，邀请赖看真、朱羿宣担任指导老师，是云林县第一个有歌仔戏班的社区。已于9月6日假西螺农会、西螺广福宫粉墨登场，并录制成影片，于每周五、六、日定时提供游客观赏。</p>
 <p>已累积多年社造成果的埤头社区，今年持续推展丰足的社造能量，增设多件立体雕塑作品放置于埤头绘本公园，让公园成为一个会说故事的文创园区。今年更由在地艺术家-廖森茂，揣摩着绘本中的感觉，一步步雕塑出来，并且设计制作出“稻浪上的鲸鱼-小夜灯”，可爱的模样，让与会来宾频频出价想购买！</p>
-<p>螺阳文教基金会董事长何美惠表示，该基金会长久在地方深耕，为在地艺文发展及<ahref="https://github.com/tx281/djy/blob/master/gb/tag/%E7%A4%BE%E5%8C%BA%E8%90%A5%E9%80%A0.md#1">社区营造</a>上着力，希望将这股能量扩散，持续推广社造理念，陪伴云林县社区发展，并鼓励社区参与艺文活动呈现在地特色，将社造理念与热情如种子般散播到全云林，累积更多艺文及社造能量，鼓励大家艺起来诉说自己社区的精彩故事！</p>
+<p>螺阳文教基金会董事长何美惠表示，该基金会长久在地方深耕，为在地艺文发展及<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%A4%BE%E5%8C%BA%E8%90%A5%E9%80%A0.md#1">社区营造</a>上着力，希望将这股能量扩散，持续推广社造理念，陪伴云林县社区发展，并鼓励社区参与艺文活动呈现在地特色，将社造理念与热情如种子般散播到全云林，累积更多艺文及社造能量，鼓励大家艺起来诉说自己社区的精彩故事！</p>
 <p>责任编辑：玉珍</p>
 
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/tx281/djy/blob/master/gb/16/11/17/n8502794.md#1">十字社区文化传承 培训解说员最小3岁</a></li>
-<li><a href="https://github.com/tx281/djy/blob/master/gb/17/2/12/n8803193.md#1">音乐教授：找到传统文化发展之路</a></li>
-<li><a href="https://github.com/tx281/djy/blob/master/gb/17/8/28/n9572726.md#1">北加州奥克兰华埠街会  繁荣社区文化</a></li>
-<li><a href="https://github.com/tx281/djy/blob/master/gb/17/10/21/n9756291.md#1">年度青苹果节 社区文化缤纷多彩（组图）</a></li>
-<li><a href="https://github.com/tx281/djy/blob/master/gb/17/12/7/n9934346.md#1">嘉义市社区营造联合成果展 10日棒球场登场</a></li>
-<li><a href="https://github.com/tx281/djy/blob/master/gb/18/1/21/n10075774.md#1">回味金兰社区营造成果展</a></li>
-<li><a href="https://github.com/tx281/djy/blob/master/gb/18/7/24/n10585503.md#1">联大“客意”设计成果展  客家文化发展中心开展</a></li>
-<li><a href="https://github.com/tx281/djy/blob/master/gb/18/9/25/n10738953.md#1">城市再造低碳宜居社区   营造幸福亮点活动</a></li>
-<li><a href="https://github.com/tx281/djy/blob/master/gb/20/6/8/n12170412.md#1">嘉县府吁请养殖渔民于作业时  作好防暑工作</a></li>
-<li><a href="https://github.com/tx281/djy/blob/master/gb/20/6/8/n12170307.md#1">“走读社会、动手实作”  屏大暑期服务队授旗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/11/17/n8502794.md#1">十字社区文化传承 培训解说员最小3岁</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/2/12/n8803193.md#1">音乐教授：找到传统文化发展之路</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/8/28/n9572726.md#1">北加州奥克兰华埠街会  繁荣社区文化</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/10/21/n9756291.md#1">年度青苹果节 社区文化缤纷多彩（组图）</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/12/7/n9934346.md#1">嘉义市社区营造联合成果展 10日棒球场登场</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/1/21/n10075774.md#1">回味金兰社区营造成果展</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/7/24/n10585503.md#1">联大“客意”设计成果展  客家文化发展中心开展</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/9/25/n10738953.md#1">城市再造低碳宜居社区   营造幸福亮点活动</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680727.md#1">2022年嘉义区庆祝青年节 表扬36位优秀青年</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680578.md#1">2022年春祭 嘉市学生329青年节追思先贤烈士</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/7/20/n10576459.md#1" target="_blank">晓明：桂林“文革”运动的回忆与思考</a></li><li><a href="https://github.com/tx281/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/22/n11273123.md#1" target="_blank">汶川地震山崩地裂的那一刻</a></li>
+<li><a href="https://github.com/upjkzu3674/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/21/n11270152.md#1" target="_blank">中共暴政录：支持苏俄入侵中国的中东路事件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/14/10/23/n4278970.md#1" target="_blank">唐风：加拿大警官看完《转法轮》之后</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/tx281/djy/blob/master/gb/20/6/6/n12166947.md#1">韩国瑜遭罢免 杜汶泽用简体字嘲讽获爆赞</a></li>
-<li><a href="https://github.com/tx281/djy/blob/master/gb/20/6/6/n12166205.md#1">韩国瑜被罢免 台史上首位 同意票破93万</a></li>
-<li><a href="https://github.com/tx281/djy/blob/master/gb/20/6/6/n12166650.md#1">高雄市议长许崑源惊传坠楼身亡</a></li>
-<li><a href="https://github.com/tx281/djy/blob/master/gb/20/6/6/n12166216.md#1">韩国瑜12日前解职 台政院派代理市长</a></li>
-<li><a href="https://github.com/tx281/djy/blob/master/gb/20/6/6/n12166973.md#1">【新闻看点】韩国瑜遭罢免 跨国反共联盟成立</a></li>
-<li><a href="https://github.com/tx281/djy/blob/master/gb/20/6/5/n12165021.md#1">郝海东灭共宣言引爆网络 微信搜索量涨22倍</a></li>
-<li><a href="https://github.com/tx281/djy/blob/master/gb/20/6/6/n12167087.md#1">遭罢免 韩国瑜能东山再起？台名嘴下惊人断语</a></li>
-<li><a href="https://github.com/tx281/djy/blob/master/gb/20/6/8/n12169269.md#1">吴朋奉雨中告别式 演艺圈好友与爱犬送行</a></li>
-<li><a href="https://github.com/tx281/djy/blob/master/gb/20/6/5/n12164567.md#1">在台北纪念六四 港词作人林夕高喊：天灭中共</a></li>
-<li><a href="https://github.com/tx281/djy/blob/master/gb/20/6/5/n12163781.md#1">生田斗真与清野菜名已登记结婚 联名宣布喜讯</a></li>
-<li><a href="https://github.com/tx281/djy/blob/master/gb/20/2/16/n11872169.md#1">【命理】为何种瓜人后代能出四位皇帝？</a></li>
-<li><a href="https://github.com/tx281/djy/blob/master/gb/14/4/13/n4130520.md#1">米开朗基罗（11）《最后的审判》（上）</a></li>
-<li><a href="https://github.com/tx281/djy/blob/master/gb/20/5/30/n12148574.md#1">文姬归汉凄又美（1）</a></li>
-<li><a href="https://github.com/tx281/djy/blob/master/gb/7/12/27/n1956051.md#1">城市中的神殿——另类神殿故事</a></li>
-<li><a href="https://github.com/tx281/djy/blob/master/gb/20/6/4/n12159714.md#1">面纱下的真相 霍乱中的觉醒</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13679895.md#1">梁锦祥：故宫大门倒等异象频现 人类应反思</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678880.md#1">【新闻大家谈】防疫手段失控 中共危机加剧</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678895.md#1">【拍案惊奇】遇难者头七 东航空难变政治事件</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676987.md#1">威尔?史密斯上台搧颁奖人 杜汶泽一假设引共鸣</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/tx281/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/tx281/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/10/19/n10795340.htm">“精彩社造在我家” 展现社区丰沛生命力</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/10/19/n10795340.htm">“精彩社造在我家” 展现社区丰沛生命力</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/tx281/djy/blob/master/gb/18/10/19/n10795340.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/tx281/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tx281/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/tx281/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/tx281/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/tx281/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tx281/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/tx281/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tx281/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/tx281/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tx281/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/tx281/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tx281/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/tx281/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tx281/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/tx281/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tx281/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/tx281/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tx281/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/tx281/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tx281/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/tx281/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tx281/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/tx281/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tx281/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/tx281/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tx281/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/tx281/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tx281/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/tx281/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tx281/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/tx281/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tx281/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/tx281/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tx281/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/tx281/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tx281/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/tx281/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tx281/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/tx281/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tx281/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/tx281/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tx281/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/tx281/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tx281/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/tx281/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tx281/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/tx281/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tx281/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/18/10/19/n10795340.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
